--- a/thesis/document.bib
+++ b/thesis/document.bib
@@ -8,3 +8,24 @@
     year={2008},
     publisher={ACM}
 }
+
+@article{bzj2006constcurative,
+  title={常曲率的空间曲线的特性研究},
+  author={展丙军},
+  journal={大庆师范学院学报},
+  volume={026},
+  number={002},
+  pages={4-5},
+  year={2006},
+}
+
+@article{marxapplication,
+author={瞿金平 and 彭响方},
+title={马克思主义哲学在高分子材料成型加工新技术研究中的指导作用},
+journal={华南理工大学学报(社会科学版)},
+year={2001},
+volum={3},
+number={1},
+pages={25-30},
+month={2},
+}
