--- a/thesis/document.tex
+++ b/thesis/document.tex
@@ -80,6 +80,11 @@
 % 清除目录后面空页的页眉和页脚
 \clearpage{\pagestyle{empty}\cleardoublepage}
 
+% 内容提要
+\thesissummary
+
+\theesissummary
+
 %%% 正文
 \mainmatter
 \defaultfont                        % 正文使用默认字体，小四，宋体
@@ -98,7 +103,7 @@
 
 \section{二级标题}
 
-{\hei 二级标题}
+二级标题
 
 \subsection{三级标题}
 
@@ -269,24 +274,25 @@
     \end{verse}
 \end{quote}
 
+\clearpage
+\phantomsection
+%插入致谢
+\chapter*{致 \qquad 谢}
+\addcontentsline{toc}{chapter}{致谢}
+%\thispagestyle{empty}
+\rule{0pt}{0pt}\par %添加空行
+坚持实事求是，反对脱离历史条件的空谈蛮干。实事求是，也是历史唯物主义观点。历史主义和唯物主义是有机联系、浑然一体的。坚持历史主义，必须坚持唯物主义，必须反对官僚主义、主观臆断，反对虚无主义、神秘主义，反对一切形式的空想和蛮干。尊重客观形势、尊重客观实际，才能制定出符合规律的方针路线，我们的事业才能胜利，我们才能尽可能地少走弯路。“吃大锅饭”，就是过高地估计了人民群众的思想素质和道德素质，在没有严格的规章制度、科学的预算和纪律要求的保障下，采取了过于理想的社会模式，从而使得很多道德水平低下的人消积怠工、投机取巧，使得许多管理水平低下的人走上领导者岗位，加上某些别有用心的人煽动、破坏，给我们的事业造成了巨大损失。
 
+认清历史形势，利用一切有利条件和时机，敢于变革，推动人类社会向更高的物质文明和精神文明发展。坚持历史唯物主义观念，也要防止那些“教条主义、保守主义”等呆板运用历史唯物主义观点的行为。不能清醒地认清形势和历史发展趋势，不敢变革或不愿变革，也可能坐失发展良机，给以后的事业造成难以挽回的损失。比如在当今竞争日趋激烈、形势日趋复杂、能源日益紧张、不稳定因素大量存在、腐败势力十分强大、道德认识存在多元化矛盾化等等情况下，如果不能高瞻远瞩、未雨绸缪，及早采取加强国防、反腐倡廉、利民惠民、统一思想、加强德育、发展周边的关系等一系列果断措施，必然会给我们的事业带来难以控制的损失。
 
 %最后设置格式，插入参考文献。
 \defaultfont
 \bibliographystyle{./gbt7714-author-year} %用GBT7714-2015格式进行排版。若未安装此拓展包导致报错，可以将\bibliographystyle改为plain，如下一行所示
 %\bibliographystyle{plain}
-\clearpage
 \phantomsection
 \addcontentsline{toc}{chapter}{参考文献}
+\rule{0pt}{0pt}\par
 \nocite{*} %展示所有的参考文献，即使正文中没有显式引用过。如果不需要，请注释掉这一行。
 \bibliography{document}
-%插入致谢
-\chapter*{致 \qquad 谢}
-\addcontentsline{toc}{chapter}{致谢}
-\thispagestyle{empty}
-
-坚持实事求是，反对脱离历史条件的空谈蛮干。实事求是，也是历史唯物主义观点。历史主义和唯物主义是有机联系、浑然一体的。坚持历史主义，必须坚持唯物主义，必须反对官僚主义、主观臆断，反对虚无主义、神秘主义，反对一切形式的空想和蛮干。尊重客观形势、尊重客观实际，才能制定出符合规律的方针路线，我们的事业才能胜利，我们才能尽可能地少走弯路。“吃大锅饭”，就是过高地估计了人民群众的思想素质和道德素质，在没有严格的规章制度、科学的预算和纪律要求的保障下，采取了过于理想的社会模式，从而使得很多道德水平低下的人消积怠工、投机取巧，使得许多管理水平低下的人走上领导者岗位，加上某些别有用心的人煽动、破坏，给我们的事业造成了巨大损失。
-
-认清历史形势，利用一切有利条件和时机，敢于变革，推动人类社会向更高的物质文明和精神文明发展。坚持历史唯物主义观念，也要防止那些“教条主义、保守主义”等呆板运用历史唯物主义观点的行为。不能清醒地认清形势和历史发展趋势，不敢变革或不愿变革，也可能坐失发展良机，给以后的事业造成难以挽回的损失。比如在当今竞争日趋激烈、形势日趋复杂、能源日益紧张、不稳定因素大量存在、腐败势力十分强大、道德认识存在多元化矛盾化等等情况下，如果不能高瞻远瞩、未雨绸缪，及早采取加强国防、反腐倡廉、利民惠民、统一思想、加强德育、发展周边的关系等一系列果断措施，必然会给我们的事业带来难以控制的损失。
 
 \end{document}
