--- a/thesis/preface/cover.tex
+++ b/thesis/preface/cover.tex
@@ -1,7 +1,7 @@
 %
 % 手动在长标题中利用 \par 输入断行，
-\ctitle{中文标题}
-\etitle{English Title}
+\ctitle{一个因为某些机缘巧合变得冗长\par 而又枯燥的中文标题~~~~~~~~}
+\etitle{O Serendipity, You Made This English Title~~~~~~\par Tediously Long~~~~~~~~}
                                        % 论文 内容提要
 \cthesissummary{
     中文摘要。
@@ -14,5 +14,8 @@
 }
 
 \ekeywords{a, b, c}
+
+\cdate{2021年5月17日}
+\cauthor{张~~三}
 
 \makecover
