solve encoding problem

--- a/thesis/jluthesisUTF8.sty
+++ b/thesis/jluthesisUTF8.sty
@@ -476,7 +476,7 @@
 %    \makebox[\jlutextwidthtwo][s]{研究生学号}  \makebox[2cm][l]{：\@studnumber}%
 %  }
   \rule{0ex}{0ex} %phantom charactor
-
+　%一个全角空格，修复复制乱码问题，原理不明
 %    \hei \yihao 吉~~~~~林~~~~~大~~~~~学
 %
 %    \hei \erhao 学~~~~士~~~~学~~~~位~~~~论~~~~文
